Update jinterface to 1.13.1 from OTP 25.2